Fix icon not showing up

--- a/src/styles/event-form.less
+++ b/src/styles/event-form.less
@@ -709,6 +709,7 @@
   position: absolute;
   left: -1em;
   top: 6px;
+  font-weight: bold;
 }
 
 .event-type-choser-label {
